--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@types/node": "22.15.23",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
-    "autoprefixer": "10.4.21",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
     "next": "15.3.2",
-    "postcss": "8.5.3",
+    "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "4.1.7",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.8.3"
   }
 }
