--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
     "autoprefixer": "^10.4.21",
+    "classnames": "^2.3.2",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
     "next": "15.3.2",
