--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "15.3.2",
     "next": "15.3.2",
     "postcss": "^8.5.3",
+    "prisma": "^5.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
