--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "zod": "^3.22.2"
   }
 }
