--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^3.2.1",
     "@types/node": "22.15.23",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
