--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "19.1.5",
     "autoprefixer": "^10.4.21",
     "classnames": "^2.3.2",
+    "easymde": "^2.20.0",
+    "easymode": "^1.0.0",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
     "next": "15.3.2",
@@ -24,6 +26,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.3",
     "zod": "^3.22.2"
