--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "classnames": "^2.3.2",
     "easymde": "^2.20.0",
     "easymode": "^1.0.0",
@@ -25,6 +26,7 @@
     "prisma": "^5.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^5.5.0",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^3.4.17",
