--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "classnames": "^2.3.2",
+    "delay": "^6.0.0",
     "easymde": "^2.20.0",
     "easymode": "^1.0.0",
     "eslint": "9.27.0",
@@ -29,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.3",
