--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:masterkey@localhost:3306/issue-tracker"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="K2yo0aTbFhPmj4LM/OPGLRYJfQhKaGLJV/sjSfDn8v8="
