--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
     "next": "15.3.2",
+    "next-auth": "^4.23.1",
     "postcss": "^8.5.3",
     "prisma": "^5.3.1",
     "react": "19.1.0",
