configuring Google provider

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:masterkey@localhost:3306/issue-tracker"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="K2yo0aTbFhPmj4LM/OPGLRYJfQhKaGLJV/sjSfDn8v8="
+GOOGLE_CLIENT_ID="1077765045523-7u7jiku6rasg62tqabt4bmr050m7se7p.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
